[gd_scene load_steps=6 format=3 uid="uid://b1puwl8rahe33"]

[ext_resource type="Script" path="res://select_date.gd" id="1_2f0i8"]
[ext_resource type="Texture2D" uid="uid://f0ufcmrqnuea" path="res://Backgrounds/Snowy_Background_-_Plain.png" id="1_vm8l6"]
[ext_resource type="Texture2D" uid="uid://cp3xkg6xwfefw" path="res://Characters/Percey.png" id="2_mfiko"]
[ext_resource type="Texture2D" uid="uid://cx8816hkfo0lx" path="res://Characters/Ash.png" id="3_pvgbc"]
[ext_resource type="Texture2D" uid="uid://danrlufwkn3eg" path="res://Characters/Alex_Neutral.png" id="4_tisxh"]

[node name="select date" type="Node2D"]
script = ExtResource("1_2f0i8")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 2360.0
offset_bottom = 1640.0
texture = ExtResource("1_vm8l6")

[node name="AlexNeutral" type="Sprite2D" parent="TextureRect"]
position = Vector2(208, 272)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_tisxh")

[node name="Percy" type="Sprite2D" parent="TextureRect"]
position = Vector2(944, 256)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_mfiko")

[node name="Ash" type="Sprite2D" parent="TextureRect"]
position = Vector2(576, 256)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_pvgbc")

[node name="TextBox" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_top = 512.0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.964706, 0.698039, 0.807843, 1)

[node name="Dialogue" type="Label" parent="TextureRect/TextBox"]
layout_mode = 0
offset_left = 24.0
offset_top = 48.0
offset_right = 1112.0
offset_bottom = 168.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Who to ask out?"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Alex Button" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 80.0
offset_top = 16.0
offset_right = 344.0
offset_bottom = 520.0
flat = true

[node name="Ash Button" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 448.0
offset_top = 16.0
offset_right = 712.0
offset_bottom = 520.0
flat = true

[node name="Percy Button" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 816.0
offset_top = 16.0
offset_right = 1080.0
offset_bottom = 520.0
flat = true

[connection signal="pressed" from="TextureRect/Alex Button" to="." method="_on_alex_button_pressed"]
[connection signal="pressed" from="TextureRect/Ash Button" to="." method="_on_ash_button_pressed"]
[connection signal="pressed" from="TextureRect/Percy Button" to="." method="_on_percy_button_pressed"]
